<resources>
    <string name="app_name">Profile Kreativa</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_Nama_PTKreativa">PT Kreativa Tecnologi Solusindo</string>
    <string name="nav_Alamat">Jln. Ban Barak Gang Carikan No 60 - Banjarsari - Kediri</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="contact_us">Contact Us</string>

    <string name="Forgotpwd">Forgot Password?</string>
    <string name="anyacount">Not Having an Account?</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="drawer_Home">Home</string>
    <string name="drawer_Organisasi">Organisasi</string>
    <string name="drawer_event">Event</string>
    <string name="drawer_Galery">Galery</string>
    <string name="drawer_Product">Product</string>
    <string name="drawer_Contact">Contact</string>
    <string name="drawer_Update">New Post</string>
    <string name="drawer_Portofolio">Portofolio</string>
    <string name="my_portofolio">my portofolio</string>
    <string name="visi_misi">Visi Misi</string>
    <string name="fasilitas">Fasilitas</string>

    <string name="gambar">gambar</string>
    <string name="deskripsi">deskripsi</string>
    <string name="organisasi">Organisation Profile</string>
    <string name="struktur_org">STRUKTUR ORGANISASI</string>


    <string name="visi">Visi :</string>
    <string name="misi">Misi :</string>

    <string name="app_splash_logo">LogoKreativa</string>
    <string name="spp_splash_profile">APLIKASI PROFILE</string>
    <string name="spp_splash_nama">PT. KREATIVA TECHNOLOGI SOLUSINDO</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string-array name="status">
        <item>SD</item>
        <item>SMP</item>
        <item>SMA</item>
        <item>SMK</item>
        <item>D1</item>
        <item>D2</item>
        <item>D3</item>
        <item>D4</item>
        <item>S1</item>
        <item>S2</item>
        <item>S3</item>
    </string-array>

    <string-array name="kel">
        <item>Laki</item>
        <item>Perempuan</item>
    </string-array>
</resources>
