<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/drawer_Home" />
        <item
            android:id="@+id/nav_org"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/drawer_Organisasi"/>
        <item
            android:id="@+id/nav_galery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/drawer_Galery"/>
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/drawer_Product"/>
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/drawer_Contact"/>
    </group>
    
</menu>
