<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/drawer_Home"
        android:icon="@drawable/ic_menu_gallery"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_Up_date"
        android:orderInCategory="100"
        android:title="@string/drawer_Update"
        android:icon="@drawable/ic_menu_gallery"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_potofolio"
        android:orderInCategory="100"
        android:title="@string/drawer_Portofolio"
        android:icon="@drawable/ic_menu_gallery"
        app:showAsAction="never" />
</menu>
