<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Organisation"
    android:orientation="vertical"
    android:scrollbars="vertical">

    <RelativeLayout
        android:id="@+id/button_arraw"
        android:layout_width="50dp"
        android:layout_height="56dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:gravity="center">

        <View
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:onClick="onBack"
            android:background="@drawable/ic_arrow_back_black_24dp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:layout_marginStart="50sp">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_product"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:textAlignment="center"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:elevation="4dp"
            app:title="@string/organisasi"
            app:titleTextColor="@color/white">

        </android.support.v7.widget.Toolbar>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:layout_marginTop="60dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <TextView
                android:id="@+id/txt_judulstruktur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/struktur_org"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:fontFamily="sans-serif-smallcaps"
                android:textAlignment="center"
                android:textStyle="bold" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_judul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nav_Nama_PTKreativa"
                app:fontFamily="sans-serif-smallcaps"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textAlignment="center"
                android:textStyle="bold"/>
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:scrollbars="vertical">

            <ImageView
                android:id="@+id/IV_organisasi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:src="@drawable/ic_menu_gallery"
                android:contentDescription="@string/gambar"/>
        </android.support.constraint.ConstraintLayout>


    </LinearLayout>

</RelativeLayout>