<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/colorS_Accent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:elevation="50dp">

        <TextView
            android:id="@+id/txt_judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spp_splash_nama"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            app:fontFamily="@font/montserrat_bold"
            android:textSize="18sp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"/>

        <LinearLayout
            app:elevation="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/bg_login">

            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/user"-->
            <!--android:textColor="@color/colorS_Accent"-->
            <!--android:layout_marginTop="70dp"-->
            <!--android:layout_marginBottom="5dp"-->
            <!--android:layout_marginStart="20dp"-->
            <!--android:layout_marginLeft="20dp"-->
            <!--android:textSize="17dp"-->
            <!--android:fontFamily="@font/robotocondensed_bold"/>-->
            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:background="@drawable/bg_input_login"
                android:hint="@string/username"
                android:padding="10dp"
                android:textAlignment="center"
                android:textColor="@color/biru1_200"
                android:textColorHint="@color/biru1_200"
                app:fontFamily="@font/robotocondensed_bold"
                android:layout_marginHorizontal="20dp" />
            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:text="@string/pwd"-->
            <!--android:textColor="@color/colorS_Accent"-->
            <!--android:layout_marginStart="20dp"-->
            <!--android:layout_marginLeft="20dp"-->
            <!--android:layout_marginBottom="5dp"-->
            <!--android:textSize="17dp"-->
            <!--android:fontFamily="@font/robotocondensed_bold"-->
            <!--/>-->
            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/bg_input_login"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textAlignment="center"
                android:textColor="@color/biru1_200"
                android:textColorHint="@color/biru1_200"
                app:fontFamily="@font/robotocondensed_bold"
                android:layout_marginHorizontal="20dp" />
            <TextView
                android:id="@+id/txt_lupapwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Forgot Password?"
                android:textColor="@color/colorS_Accent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:fontFamily="@font/roboto_thin"
                android:layout_gravity="right"
                />
            <Button
                android:id="@+id/bt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_button_login"
                android:text="LOGIN"
                android:textSize="19dp"
                android:textColor="@color/colorS_Accent"
                app:fontFamily="@font/robotocondensed_bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Not Having an Account?"
                android:textColor="@color/colorS_Accent"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:textSize="16dp"
                android:fontFamily="@font/roboto_thin"
                android:textAlignment="center"
                />

            <Button
                android:id="@+id/bt_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/bg_button_login"
                android:text="REGISTER"
                android:textSize="19dp"
                android:textColor="@color/colorS_Accent"
                android:fontFamily="@font/robotocondensed_bold"
                />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-485dp"
            android:layout_gravity="center"
            android:elevation="100dp">
            <ImageView
                android:foregroundGravity="center"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/logo"/>
        </RelativeLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>